Bug 445802 - Vector shape update bug when reducing stroke width
Summary: Vector shape update bug when reducing stroke width
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Layers/Vector (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-11-20 11:53 UTC by Alvin Wong
Modified: 2021-12-13 14:13 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alvin Wong 2021-11-20 11:53:02 UTC
SUMMARY
When reducing stroke width of a vector shape, the shape does not redraw cleanly such that part of the old outline is left over.


STEPS TO REPRODUCE
1. Create a Vector layer
2. Draw a rectangle on it
3. Change its stroke width to something large, like 500px
4. Change its stroke width to something small, like 50px


OBSERVED RESULT
Part of the old outline is not cleared.

EXPECTED RESULT
The old outline should be cleared.


SOFTWARE/OS VERSIONS
Windows: 10

ADDITIONAL INFORMATION
Nightly afcbeae
Comment 1 Bug Janitor Service 2021-12-13 14:05:17 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/1226
Comment 2 Dmitry Kazakov 2021-12-13 14:12:28 UTC
Git commit 24c3640efb0fa427c4a9c1c6cfd1248e93545b09 by Dmitry Kazakov, on behalf of Black Cat.
Committed on 13/12/2021 at 14:11.
Pushed by dkazakov into branch 'master'.

Fix canvas update after stroke line width change
Based on 6f51599f

M  +4    -2    libs/flake/commands/KoShapeStrokeCommand.cpp

https://invent.kde.org/graphics/krita/commit/24c3640efb0fa427c4a9c1c6cfd1248e93545b09
Comment 3 Dmitry Kazakov 2021-12-13 14:13:07 UTC
Git commit a28b154270fba9f21ba00a2e11354a8dc1393b0b by Dmitry Kazakov, on behalf of Black Cat.
Committed on 13/12/2021 at 14:12.
Pushed by dkazakov into branch 'krita/5.0'.

Fix canvas update after stroke line width change
Based on 6f51599f
(cherry picked from commit 24c3640efb0fa427c4a9c1c6cfd1248e93545b09)

M  +4    -2    libs/flake/commands/KoShapeStrokeCommand.cpp

https://invent.kde.org/graphics/krita/commit/a28b154270fba9f21ba00a2e11354a8dc1393b0b