Fix canvas update after stroke line width change Based on 6f51599f

BUG:445802