libs/flake/commands/KoShapeStrokeCommand.cpp
@@ -94,8 +94,9 @@ void KoShapeStrokeCommand::redo()
     KUndo2Command::redo();
     QList<KoShapeStrokeModelSP>::iterator strokeIt = d->newStrokes.begin();
     Q_FOREACH (KoShape *shape, d->shapes) {
+        const QRectF oldDirtyRect = shape->boundingRect();
         shape->setStroke(*strokeIt);
-        shape->update();
+        shape->updateAbsolute(oldDirtyRect | shape->boundingRect());
         ++strokeIt;
     }
 }
@@ -105,8 +106,9 @@ void KoShapeStrokeCommand::undo()
     KUndo2Command::undo();
     QList<KoShapeStrokeModelSP>::iterator strokeIt = d->oldStrokes.begin();
     Q_FOREACH (KoShape *shape, d->shapes) {
+        const QRectF oldDirtyRect = shape->boundingRect();
         shape->setStroke(*strokeIt);
-        shape->update();
+        shape->updateAbsolute(oldDirtyRect | shape->boundingRect());
         ++strokeIt;
     }
 }
